--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/cloud-firestore": "^1.48",
+        "kreait/firebase-php": "^7.16",
         "kreait/laravel-firebase": "5.10",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
